--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
 :root {
   font-family: "Cousine", ui-monospace, "Cascadia Code", "Source Code Pro",
     Menlo, Consolas, "DejaVu Sans Mono", monospace;
+  font-size: 1.15rem;
 }
 
 body {
@@ -30,6 +31,10 @@ h2 {
 
 h3 {
   font-size: 1.8rem;
+}
+
+h4 {
+  font-size: 1.2rem;
 }
 
 p {
